[build-system]
requires = ["setuptools>=42.0", "pygbag"]
build-backend = "setuptools.build_meta"

[tool.pygbag]
package = "zombie_strike"
app_name = "Zombie Strike"
version = "1.0.0"
company = "Your Name"
description = "A zombie survival game"
icon = "assets/icon.png"

[build]
out = "build"
include = ["assets/**/*"]

[build.package_data]
"*" = ["assets/**/*"]
